<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/cat_info">

        <Preference
            android:key="info_privacy"
            android:title="@string/info_privacy_title"
            android:summary="@string/info_privacy_summary"
            android:selectable="false" />

        <Preference
            android:key="info_license"
            android:title="@string/info_license_title"
            android:summary="@string/info_license_summary"
            android:selectable="false" />

        <Preference
            android:key="info_version"
            android:title="@string/info_version_title"
            android:selectable="false" />

        <Preference
            android:key="onboarding_replay"
            android:title="@string/onboarding_replay_title"
            android:summary="@string/onboarding_replay_summary" />

        <Preference
            android:key="d89_feature_overview"
            android:title="@string/d89_title"
            android:summary="@string/d89_summary">
            <intent
                android:targetPackage="de.froehlichmedia.adaptkey"
                android:targetClass="de.froehlichmedia.adaptkey.settings.FeatureOverviewActivity" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cat_layout">

        <SeekBarPreference
            android:key="c01_space_weight"
            android:title="@string/c01_space_title"
            android:summary="@string/c01_space_summary"
            android:defaultValue="320"
            android:max="600"
            app:min="100"
            app:seekBarIncrement="10"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:key="c01_comma_weight"
            android:title="@string/c01_comma_title"
            android:defaultValue="140"
            android:max="300"
            app:min="50"
            app:seekBarIncrement="10"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:key="c01_period_weight"
            android:title="@string/c01_period_title"
            android:defaultValue="140"
            android:max="300"
            app:min="50"
            app:seekBarIncrement="10"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:key="c01_backspace_extra"
            android:title="@string/c01_backspace_title"
            android:summary="@string/c01_backspace_summary"
            android:defaultValue="10"
            android:max="50"
            app:min="0"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:key="c01_shift_extra"
            android:title="@string/c01_shift_title"
            android:summary="@string/c01_shift_summary"
            android:defaultValue="0"
            android:max="50"
            app:min="0"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true" />

        <SwitchPreferenceCompat
            android:key="c09_number_row"
            android:title="@string/c09_title"
            android:summary="@string/c09_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="d59_symbol_key"
            android:title="@string/d59_title"
            android:summary="@string/d59_summary"
            android:defaultValue="true" />

        <SeekBarPreference
            android:key="d55_space_below_number_row"
            android:title="@string/d55_below_title"
            android:summary="@string/d55_below_summary"
            android:defaultValue="7"
            android:max="25"
            app:min="0"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:key="d55_space_above_space_row"
            android:title="@string/d55_above_title"
            android:summary="@string/d55_above_summary"
            android:defaultValue="7"
            android:max="25"
            app:min="0"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:key="d32_longpress_delay_ms"
            android:title="@string/d32_title"
            android:summary="@string/d32_summary"
            android:defaultValue="320"
            android:max="600"
            app:min="150"
            app:seekBarIncrement="10"
            app:showSeekBarValue="true" />

        <SwitchPreferenceCompat
            android:key="c08_hints_enabled"
            android:title="@string/c08_hints_title"
            android:summary="@string/c08_hints_summary"
            android:defaultValue="true" />

        <Preference
            android:key="c08_letter_hints_editor"
            android:title="@string/c08_editor_title"
            android:summary="@string/c08_editor_summary">
            <intent
                android:targetPackage="de.froehlichmedia.adaptkey"
                android:targetClass="de.froehlichmedia.adaptkey.settings.LetterHintsActivity" />
        </Preference>

        <Preference
            android:key="c08_reset_hints"
            android:title="@string/c08_reset_title"
            android:summary="@string/c08_reset_summary" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cat_suggestions">

        <SwitchPreferenceCompat
            android:key="d234_autocorrect_enabled"
            android:title="@string/d234_autocorrect_enabled_title"
            android:summary="@string/d234_autocorrect_enabled_summary"
            android:defaultValue="true" />

        <SeekBarPreference
            android:key="c02_resort_delay_ms"
            android:title="@string/c02_title"
            android:summary="@string/c02_summary"
            android:defaultValue="300"
            android:max="600"
            app:min="0"
            app:seekBarIncrement="50"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:key="c03_max_suggestions"
            android:title="@string/c03_title"
            android:summary="@string/c03_summary"
            android:defaultValue="8"
            android:max="10"
            app:min="6"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true" />

        <SwitchPreferenceCompat
            android:key="c04_highlight_enabled"
            android:title="@string/c04_enabled_title"
            android:summary="@string/c04_enabled_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="c04_highlight_color"
            android:title="@string/c04_color_title"
            android:entries="@array/c04_color_labels"
            android:entryValues="@array/c04_color_values"
            android:defaultValue="#FF43A047"
            app:useSimpleSummaryProvider="true"
            android:dependency="c04_highlight_enabled" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cat_dictionary">

        <Preference
            android:key="c05_blacklist"
            android:title="@string/c05_title"
            android:summary="@string/c05_summary">
            <intent
                android:targetPackage="de.froehlichmedia.adaptkey"
                android:targetClass="de.froehlichmedia.adaptkey.settings.BlacklistActivity" />
        </Preference>

        <Preference
            android:key="d177_learned_words"
            android:title="@string/d177_learned_words_title"
            android:summary="@string/d177_learned_words_summary">
            <intent
                android:targetPackage="de.froehlichmedia.adaptkey"
                android:targetClass="de.froehlichmedia.adaptkey.settings.LearnedWordsActivity" />
        </Preference>

        <SeekBarPreference
            android:key="d177_pending_blacklist_expiry_days"
            android:title="@string/d177_expiry_title"
            android:summary="@string/d177_expiry_summary"
            android:defaultValue="7"
            android:max="30"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true" />

        <Preference
            android:key="d142_credentials"
            android:title="@string/d142_credentials_title"
            android:summary="@string/d142_credentials_summary">
            <intent
                android:targetPackage="de.froehlichmedia.adaptkey"
                android:targetClass="de.froehlichmedia.adaptkey.settings.CredentialsActivity" />
        </Preference>

        <SwitchPreferenceCompat
            android:key="d224_save_credentials"
            android:title="@string/d224_save_credentials_title"
            android:summary="@string/d224_save_credentials_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="d191_contacts_suggestions_enabled"
            android:title="@string/d191_contacts_suggestions_title"
            android:summary="@string/d191_contacts_suggestions_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cat_capitalisation">

        <SwitchPreferenceCompat
            android:key="c10_comma_line_not_sentence_start"
            android:title="@string/c10_title"
            android:summary="@string/c10_summary"
            android:defaultValue="true" />

        <SeekBarPreference
            android:key="c07_shift_grace_ms"
            android:title="@string/c07_title"
            android:summary="@string/c07_summary"
            android:defaultValue="300"
            android:max="500"
            app:min="0"
            app:seekBarIncrement="50"
            app:showSeekBarValue="true" />

        <ListPreference
            android:key="c06_llm_threshold"
            android:title="@string/c06_title"
            android:entries="@array/c06_threshold_labels"
            android:entryValues="@array/c06_threshold_values"
            android:defaultValue="medium"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:key="c06_model"
            android:title="@string/c06_model_pref_title"
            android:summary="@string/c06_model_pref_summary">
            <intent
                android:targetPackage="de.froehlichmedia.adaptkey"
                android:targetClass="de.froehlichmedia.adaptkey.settings.Tier3ModelActivity" />
        </Preference>

        <SwitchPreferenceCompat
            android:key="d126_tier3_enabled"
            android:title="@string/d126_title"
            android:summary="@string/d126_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cat_feedback">

        <SwitchPreferenceCompat
            android:key="d05_key_sound"
            android:title="@string/d05_sound_title"
            android:summary="@string/d05_sound_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="d06_key_haptics"
            android:title="@string/d06_haptics_title"
            android:summary="@string/d06_haptics_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cat_calibration">

        <!-- D-237: the only top-level entry now - style picking, the live zone overlay, and the
             reset action all live inside CalibrationActivity itself. -->
        <Preference
            android:key="k01_calibration"
            android:title="@string/k01_title"
            android:summary="@string/k01_summary">
            <intent
                android:targetPackage="de.froehlichmedia.adaptkey"
                android:targetClass="de.froehlichmedia.adaptkey.settings.CalibrationActivity" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cat_diagnostics">

        <SwitchPreferenceCompat
            android:key="d_diag_enabled"
            android:title="@string/d_diag_enabled_title"
            android:summary="@string/d_diag_enabled_summary"
            android:defaultValue="false" />

        <Preference
            android:key="d_diag_log"
            android:title="@string/d_diag_log_title"
            android:summary="@string/d_diag_log_summary">
            <intent
                android:targetPackage="de.froehlichmedia.adaptkey"
                android:targetClass="de.froehlichmedia.adaptkey.settings.DiagnosticLogActivity" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
